# fmpy

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
fmpy/: __init__.py  client.py  client_legacy.py  config.py  exceptions.py
fmpy/endpoints/: __init__.py  analyst.py  bulk.py  chart.py  company.py  etf.py  forex.py  quote.py  search.py  sec.py  statements.py
fmpy/endpoints_legacy/: __init__.py
fmpy_stark/: client.py  utils.py
fmpy_stark/endpoints/: __init__.py  bulk.py  calendar.py  crypto.py  directory.py  news.py
fmpy_stark/endpoints_legacy/: bulk.py
tests/: test_client.py  test_client_legacy.py
